storage/rook-ceph/rook-dashboard-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rook-dashboard
spec:
  hosts:
    - 'internal.home.alan-jenkins.com'
  gateways:
    - internal-gateway
  http:
    - match:
        - uri:
            prefix: /rook
          rewrite:
            uri: /
      route:
        - destination:
            port:
              number: 7000
            host: rook-ceph-mgr-dashboard
